demo-crud/src/main/kotlin/com/example/democrud/error/response/ApiResponse.kt
package com.example.democrud.error.response

data class ApiResponse<T>(
    val result: T,
    val resultCode: Int,
    val resultMsg: String
)
